# gh-trs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  LICENSE  Makefile.toml  README.md  config.schema.json  docker-compose.dev.yml  docker-compose.yml  gh-trs.openapi.yml  release.sh
.github/workflows/: build-binary.yml  ci-workflows.yml  deploy.yml  tarpaulin.yml
commands/: musl-build.sh
service-info/: index.json
src/: args.rs  config.rs  config_io.rs  env.rs  git.rs  github.rs  github_api.rs  inspect.rs  lib.rs  logger.rs  main.rs  make_template.rs  publish.rs  raw_url.rs  remote.rs  test.rs  trs.rs  trs_api.rs  trs_response.rs  utils.rs  validate.rs  wes.rs
src-old/: git.bak.rs  git.rs  github.bak.rs  github.rs  main.bak.rs  main.rs  trs.rs  utils.bak.rs  utils.rs
src/command/: make_template.rs  publish.rs  test.rs  validate.rs
src/config/: io.rs  types.rs
src/trs/: api.rs  response.rs  types.rs
tests/: README.md  gh-trs.test.yml  test_config_CWL.yml  test_config_CWL_template.yml  test_config_CWL_validated.yml  test_config_NFL.yml  test_config_NFL_validated.yml  test_config_SMK.yml  test_config_SMK_validated.yml  test_config_WDL.yml  test_config_WDL_validated.yml
tools/: index.json
tools/329696cd-3100-41f8-a2bf-591b023f4b57/: index.json
tools/329696cd-3100-41f8-a2bf-591b023f4b57/versions/: index.json
tools/329696cd-3100-41f8-a2bf-591b023f4b57/versions/1.0.0/: gh-trs-config.json  index.json
tools/329696cd-3100-41f8-a2bf-591b023f4b57/versions/1.0.0/WDL/descriptor/: index.json
tools/329696cd-3100-41f8-a2bf-591b023f4b57/versions/1.0.0/WDL/files/: index.json
tools/329696cd-3100-41f8-a2bf-591b023f4b57/versions/1.0.0/WDL/tests/: index.json
tools/493c4948-987a-482b-993c-733bdb3d1d6c/: index.json
tools/493c4948-987a-482b-993c-733bdb3d1d6c/versions/: index.json
tools/493c4948-987a-482b-993c-733bdb3d1d6c/versions/1.0.0/: gh-trs-config.json  index.json
tools/493c4948-987a-482b-993c-733bdb3d1d6c/versions/1.0.0/CWL/descriptor/: index.json
tools/493c4948-987a-482b-993c-733bdb3d1d6c/versions/1.0.0/CWL/files/: index.json
tools/493c4948-987a-482b-993c-733bdb3d1d6c/versions/1.0.0/CWL/tests/: index.json
