[package]
name = "gh-trs"
version = "0.1.1"
authors = ["suecharo <suehiro619@gmail.com>"]
license = "Apache-2.0"
description = "your own API fully based on GitHub to serve workflow metadata"
readme = "README.md"
repository = "https://github.com/suecharo/gh-trs"
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
path-clean = "0.1.0"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
structopt = "0.3.21"
temp-dir = "0.1.11"
url = { version = "2.2.2", features = ["serde"] }
anyhow = "1.0.40"
human-panic = "1.0.3"
regex = "1.5.4"
which = "4.2.2"
colour = "0.6.0"
sha2 = "0.9.5"
