[package]
authors = ["suecharo <suehiro619@gmail.com>"]
categories = ["command-line-utilities"]
description = "CLI tool to publish and test your own GA4GH TRS API using GitHub"
edition = "2018"
license = "Apache-2.0"
name = "gh-trs"
readme = "README.md"
repository = "https://github.com/suecharo/gh-trs"
version = "1.1.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
base64 = "0.13.0"
chrono = {version = "0.4.19", features = ["serde"]}
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
regex = "1.5.4"
reqwest = {version = "0.11.8", features = ["blocking", "json", "multipart"]}
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.74"
serde_with = "1.11.0"
serde_yaml = "0.8.23"
sha2 = "0.10.1"
structopt = "0.3.25"
url = {version = "2.2.2", features = ["serde"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
