[package]
authors = ["suecharo <suehiro619@gmail.com>"]
categories = ["command-line-utilities"]
description = "CLI tool to publish and test your own GA4GH TRS API using GitHub"
edition = "2018"
license = "Apache-2.0"
name = "gh-trs"
readme = "README.md"
repository = "https://github.com/suecharo/gh-trs"
version = "1.1.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
chrono = {version = "0.4.19", features = ["serde"]}
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.16"
regex = "1.5.5"
reqwest = {version = "0.11.10", features = ["blocking", "json", "multipart"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_with = "1.12.1"
serde_yaml = "0.8.23"
sha2 = "0.10.2"
structopt = "0.3.26"
url = {version = "2.2.2", features = ["serde"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
